issue_33 Spacing issue on mobile

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -119,7 +119,10 @@ body {
       &.isOpen {
         color: $turquoise;
         justify-self:flex-start;
-        margin-right: 50px;
+        margin-right: $base-unit * 10;
+        @media (max-width: 768px) {
+          margin-right: 0;
+        }
 
         &.isOpenSubmenu {
           color: $white;
